Increased code quality in the first notebook

--- a/code/01_data_retrieval.ipynb
+++ b/code/01_data_retrieval.ipynb
@@ -27,9 +27,15 @@
    "source": [
     "# download data from AWS\n",
     "def download_multi_dates (from_date, until_date):\n",
-    "    from_date = from_date\n",
-    "    until_date = until_date\n",
-    "    \n",
+    "    \"\"\"Receiving the data from the AWS Bucket from Deutsche Börse\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    from_date : str\n",
+    "        the date it should start\n",
+    "    until_date: str\n",
+    "        the date until you want the data\n",
+    "    \"\"\"  \n",
     "    # create list for required dates\n",
     "    dates = list(pd.date_range(from_date, until_date, freq=\"D\").strftime(\"%Y-%m-%d\"))\n",
     "    \n",
@@ -54,8 +60,17 @@
    "source": [
     "# load the files from a date directory\n",
     "def load_csv_dir_multi(from_date, until_date, data_dir):\n",
-    "    from_date = from_date\n",
-    "    until_date = until_date\n",
+    "    \"\"\"Loading several CSV Files\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    from_date : str\n",
+    "        the date it should start\n",
+    "    until_date: str\n",
+    "        the date until you want the data\n",
+    "    data_dir : str\n",
+    "        the directory of the data\n",
+    "    \"\"\"\n",
     "    \n",
     "    # create list for required dates\n",
     "    dates = list(pd.date_range(from_date, until_date, freq=\"D\").strftime(\"%Y-%m-%d\"))\n",
@@ -83,6 +98,7 @@
    },
    "outputs": [],
    "source": [
+    "# specify dates\n",
     "from_date = \"2017-07-01\"\n",
     "until_date = \"2021-01-31\"\n",
     "download_multi_dates(from_date, until_date)"
@@ -94,9 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# specify dates\n",
-    "from_date = \"2017-07-01\"\n",
-    "until_date = \"2021-01-31\"\n",
     "# change directory to your local folder\n",
     "data_dir = \"../data/deutsche-boerse-xetra-pds/%s/\"\n",
     "print(\"Loading from {}\".format(data_dir))\n",
